--- a/style.css
+++ b/style.css
@@ -1,39 +1,20 @@
 body {
     text-align: center;
+background: rgb(238,174,202);
+background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
 
-h1 {
-    font-family: fantasy;
-    font-size: 45px;
-    font-weight: 200;
+img {
+    width: 350px;
+    height: 350px;
+    border: solid;
+    border-color: blanchedalmond;
 }
 
-#apps {
-    text-align: center;
-    width: 120%;
-    height: 750px;
-    background-color: aquamarine;
+img {
+    transition: transform .2s;
 }
 
-#games {
-    width: 100%;
-    height: 750px;
-    background-color: burlywood;
-}
-
-#chatbot {
-    width: 100%;
-    height: 750px;
-    background-color: cyan;
-}
-
-img: hover {
-    transform: scale(0.9)
-}
-
-.line {
-    height: 6px;
-    background-color: antiquewhite;
-    width: 70px;
-    margin: 8px auto;
+img:hover {
+    transform: scale(0.9);
 }
