--- a/style.css
+++ b/style.css
@@ -1,20 +1,167 @@
 body {
     text-align: center;
-background: rgb(238,174,202);
-background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    background-color: background: rgb(47, 144, 191);
+    background: linear-gradient(90deg, rgba(47, 144, 191, 1) 18%, rgba(31, 215, 252, 1) 37%, rgba(205, 224, 236, 1) 52%, rgba(242, 186, 186, 1) 74%, rgba(209, 130, 130, 1) 95%);
+    margin: 0;
+   
+}
+
+h1 {
+    color: darksalmon;
+    font-size: 30px;
+    font-family: fantasy;
+    font-weight: 50px;
+    font-height: 1px;
+}
+
+#bio {
+    padding: 10px;
+    font-size: 18px;
+    text-align: center;
+    color: #FAFAFA;
+    padding: 50px;
+    font-size: 42px;
 }
 
 img {
-    width: 350px;
-    height: 350px;
+    width: 300px;
     border: solid;
-    border-color: blanchedalmond;
+    border-color: black;
 }
 
-img {
-    transition: transform .2s;
+.profile {
+    width: 150px;
+    margin-bottom: 50px;
+    border-radius: 100%;
 }
 
-img:hover {
-    transform: scale(0.9);
+#welcome {
+    position: absolute;
+    overflow: hidden;
+    height: 800px;
+    color: #FFFFFF;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0.83;
+    background: linear-gradient(#60ebeb 0%, #27ae60 100%);
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+
+
+#name {
+    font-size: 30px;
+    line-height: 1.2;
+    font-family: cursive
+}
+
+h2 {
+    font-size: 30px;
+    font-weight: 300;
+    line-height: 1.2;
+    font-family: monospace
+}
+
+#bio {
+    padding: 50px;
+    text-align: center;
+    font-size: 42px;
+}
+
+.line {
+    height: 6px;
+    background-color: #000;
+    width: 70px;
+    margin: 8px auto;
+
+}
+
+p {
+    max-width: 450px;
+    margin: 25px auto;
+    font-size: 17px;
+    line-height: 1.3;
+}
+
+.parallax-inner {
+    display: table-cell;
+    position: relative;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.menu {
+    list-style: none;
+    font-family: inherit;
+    
+    top: 0 px;
+    right: 30 px;
+    z-index: 10;
+    cursor: pointer;
+}
+
+.links {
+    float: left;
+    color: aquamarine padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 25px;
+    padding-left: 33px;
+    font-family: fantasy;
+    font-size: 20px;
+    display: inline;
+}
+
+.links:hover {
+    background-color: cadetblue;
+    color: antiquewhite;
+    text-decoration: underline
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: black;
+}
+
+a {
+    text-decoration: none;
+    color: aqua;
+}
+
+.links {
+    display: inline;
+    padding-left: 33px;
+    padding-right: 25px;
+    font-family: fantasy;
+    font-size: 20px
+}
+
+.links:hover {
+    font-size: 25px;
+    text-decoration: underline;
+}
+
+html {
+    scroll-behavior: smooth;
 }
