--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: background: rgb(47, 144, 191);
     background: linear-gradient(90deg, rgba(47, 144, 191, 1) 18%, rgba(31, 215, 252, 1) 37%, rgba(205, 224, 236, 1) 52%, rgba(242, 186, 186, 1) 74%, rgba(209, 130, 130, 1) 95%);
     margin: 0;
-   
+    padding-top: 100px;
 }
 
 h1 {
@@ -96,9 +96,9 @@ p {
 .menu {
     list-style: none;
     font-family: inherit;
-    
-    top: 0 px;
-    right: 30 px;
+    position: absolute;
+    top: 10px;
+    right: 30px;
     z-index: 10;
     cursor: pointer;
 }
@@ -107,61 +107,13 @@ p {
     float: left;
     color: aquamarine padding-top: 5px;
     padding-bottom: 5px;
-    padding-right: 25px;
-    padding-left: 33px;
+    padding-right: 9px;
+    padding-left: 9px;
     font-family: fantasy;
     font-size: 20px;
-    display: inline;
 }
 
 .links:hover {
     background-color: cadetblue;
-    color: antiquewhite;
-    text-decoration: underline
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: black;
-}
-
-a {
-    text-decoration: none;
-    color: aqua;
-}
-
-.links {
-    display: inline;
-    padding-left: 33px;
-    padding-right: 25px;
-    font-family: fantasy;
-    font-size: 20px
-}
-
-.links:hover {
-    font-size: 25px;
-    text-decoration: underline;
-}
-
-html {
-    scroll-behavior: smooth;
+    color: antiquewhite
 }
